cambios de la pagina web

--- a/index.html
+++ b/index.html
@@ -110,7 +110,135 @@
                 </figure>
             </div>
         </section>
+
+        <section class="works">
+            <div class="works_container container">
+                <img src="./Imagenes/leftarrow.svg" class="works_arrow" id="before" alt="imagenes de trabajos">
+                <section class="works_body works_body--show" data-id="1">
+                    <div class="works_texts">
+                        <h2 class="subtitle">Estos son algunos de los<span class="works-testimony"></span>de los
+                            trabajos
+                            que ofrecemos en nuestro gran catalogo</h2>
+                        <p class="works_review">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias nostrum aspernatur
+                            repellendus nobis id nisi eum. Numquam modi maiores, quaerat rerum aspernatur aut architecto
+                            est dignissimos et vel quas perspiciatis.
+                        </p>
+                    </div>
+
+                    <figure class="works_picture">
+                        <img src="./Imagenes/works1.jpg" alt="trabajos" class="works_img">
+                    </figure>
+
+                </section>
+                <section class="works_body" data-id="2">
+                    <div class="works_texts">
+                        <h2 class="subtitle">Estos son algunos de los<span class="works-testimony"></span>de los
+                            trabajos
+                            que ofrecemos en nuestro gran catalogo</h2>
+                        <p class="works_review">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias nostrum aspernatur
+                            repellendus nobis id nisi eum. Numquam modi maiores, quaerat rerum aspernatur aut architecto
+                            est dignissimos et vel quas perspiciatis.
+                        </p>
+                    </div>
+
+                    <figure class="works_picture">
+                        <img src="./Imagenes/works2.jpg" alt="trabajos" class="works_img">
+                    </figure>
+
+                </section>
+                <section class="works_body" data-id="3">
+                    <div class="works_texts">
+                        <h2 class="subtitle">Estos son algunos de los<span class="works-testimony"></span>de los
+                            trabajos
+                            que ofrecemos en nuestro gran catalogo</h2>
+                        <p class="works_review">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias nostrum aspernatur
+                            repellendus nobis id nisi eum. Numquam modi maiores, quaerat rerum aspernatur aut architecto
+                            est dignissimos et vel quas perspiciatis.
+                        </p>
+                    </div>
+
+                    <figure class="works_picture">
+                        <img src="./Imagenes/works3.jpg" alt="trabajos" class="works_img">
+                    </figure>
+
+                </section>
+                <section class="works_body" data-id="4">
+                    <div class="works_texts">
+                        <h2 class="subtitle">Estos son algunos de los<span class="works-testimony"></span>de los
+                            trabajos
+                            que ofrecemos en nuestro gran catalogo</h2>
+                        <p class="works_review">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias nostrum aspernatur
+                            repellendus nobis id nisi eum. Numquam modi maiores, quaerat rerum aspernatur aut architecto
+                            est dignissimos et vel quas perspiciatis.
+                        </p>
+                    </div>
+
+                    <figure class="works_picture">
+                        <img src="./Imagenes/works4.jpg" alt="trabajos" class="works_img">
+                    </figure>
+
+                </section>
+                <section class="works_body" data-id="5">
+                    <div class="works_texts">
+                        <h2 class="subtitle">Estos son algunos de los<span class="works-testimony"></span>de los
+                            trabajos
+                            que ofrecemos en nuestro gran catalogo</h2>
+                        <p class="works_review">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias nostrum aspernatur
+                            repellendus nobis id nisi eum. Numquam modi maiores, quaerat rerum aspernatur aut architecto
+                            est dignissimos et vel quas perspiciatis.
+                        </p>
+                    </div>
+
+                    <figure class="works_picture">
+                        <img src="./Imagenes/works5.jpg" alt="trabajos" class="works_img">
+                    </figure>
+
+                </section>
+                <section class="works_body" data-id="6">
+                    <div class="works_texts">
+                        <h2 class="subtitle">Estos son algunos de los<span class="works-testimony"></span>de los
+                            trabajos
+                            que ofrecemos en nuestro gran catalogo</h2>
+                        <p class="works_review">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias nostrum aspernatur
+                            repellendus nobis id nisi eum. Numquam modi maiores, quaerat rerum aspernatur aut architecto
+                            est dignissimos et vel quas perspiciatis.
+                        </p>
+                    </div>
+
+                    <figure class="works_picture">
+                        <img src="./Imagenes/works6.jpg" alt="trabajos" class="works_img">
+                    </figure>
+
+                </section>
+                <section class="works_body" data-id="7">
+                    <div class="works_texts">
+                        <h2 class="subtitle">Estos son algunos de los<span class="works-testimony"></span>de los
+                            trabajos
+                            que ofrecemos en nuestro gran catalogo</h2>
+                        <p class="works_review">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias nostrum aspernatur
+                            repellendus nobis id nisi eum. Numquam modi maiores, quaerat rerum aspernatur aut architecto
+                            est dignissimos et vel quas perspiciatis.
+                        </p>
+                    </div>
+
+                    <figure class="works_picture">
+                        <img src="./Imagenes/works7.jpg" alt="trabajos" class="works_img">
+                    </figure>
+
+                </section>
+                <img src="./Imagenes/rightarrow.svg" class="works_arrow" id="next" alt="imagenes de trabajos">
+            </div>
+        </section>
     </main>
+
+    <script src="./Js/slider.js"></script>
 </body>
 
 </html>
