--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <header class="hero">
+    <header class="hero" id="inicio">
         <nav class="nav container">
             <div class="nav_logo">
                 <a href="#"><img src="./Imagenes/Logo.png" class="nav-title" alt="Logotipo de la empresa" width="200"
@@ -22,13 +22,13 @@
 
             <ul class="nav_link nav_link--menu">
                 <li class="nav_items">
-                    <a href="#" class="nav_links">Inicio</a>
+                    <a href="#inicio" class="nav_links">Inicio</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#" class="nav_links">Servicios</a>
+                    <a href="#servicios" class="nav_links">Servicios</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#" class="nav_links">Contacto</a>
+                    <a href="#contacto" class="nav_links">Contacto</a>
                 </li>
 
                 <img src="./Imagenes/close.svg" class="nav_close" alt="Close
@@ -48,7 +48,7 @@
         </section>
     </header>
 
-    <main name="link_main">
+    <main class="link_main" id="servicios">
         <section class="container about">
             <h2 class="subtitle">¿Que es lo que ofrecemos?</h2>
             <p class="about_paragraph">Ofrecemos lo mejor en canceleria,
@@ -106,7 +106,7 @@
                 </div>
 
                 <figure class="knowledge_picture">
-                    <img src="./Imagenes/ventanales.jpg" class="knowledge_img" alt="Imagen xd" width="700" height="700">
+                    <img src="./Imagenes/ventanales.jpg" class="knowledge_img" alt="Imagen xd" width="300" height="400">
                 </figure>
             </div>
         </section>
@@ -236,9 +236,57 @@
                 <img src="./Imagenes/rightarrow.svg" class="works_arrow" id="next" alt="imagenes de trabajos">
             </div>
         </section>
+
+        <section class="information container">
+            <div class="information_enterprise">
+
+            </div>
+
+            <div class="information_inputs">
+                <input type="text" placeholder="Nombre:" class="footer_input">
+                <input type="number" placeholder="Telefono" class="footer_input">
+                <input type="email" placeholder="Email:" class="footer_input">
+                <input type="text" placeholder="Comentarios:" class="footer_input">
+                <input type="submit" placeholder="Registrate" class="footer_submit">
+            </div>
+        </section>
+
+        <footer class="footer" id="contacto">
+            <section class="footer_container container">
+                <nav class="nav nav--footer">
+                    <h2 class="footer_title">Consulta y lleva los mejores precios</h2>
+
+                    <ul class="nav_link nav_link--footer">
+                        <li class="nav_items">
+                            <a href="#inicio" class="nav_links" style="color: #fff;">Inicio</a>
+                        </li>
+                        <li class="nav_items">
+                            <a href="#servicios" class="nav_links" style="color: #fff;">Servicios</a>
+                        </li>
+                        <li class="nav_items">
+                            <a href="#contacto" class="nav_links" style="color: #fff;">Contacto</a>
+                        </li>
+                    </ul>
+                </nav>
+            </section>
+
+            <section class="footer_copy container">
+                <div class="footer_social">
+                    <a href="https://www.facebook.com/vidriosyaluminiosdelbajioags"  target="_blank" class="footer_icons">
+                        <img src="./Imagenes/facebook.png" alt="Redes sociales" class="footer_img">
+                    </a>
+                    <a href="https://www.instagram.com/vidrios_y_aluminios_del_bajio_/" target="_blank" class="footer_icons">
+                        <img src="./Imagenes/instagram.png" alt="Redes sociales" class="footer_img">
+                    </a>
+                </div>
+
+                <h3 class="footer_copyright">&copy; 2022 por Vidrios y Aluminios del Bajio</h3>
+            </section>
+        </footer>
     </main>
 
     <script src="./Js/slider.js"></script>
+    <script src="./Js/menu.js"></script>
 </body>
 
 </html>
